fix(validators): replace input validation method with isBlank() for better readability